--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,14 @@ buildscript {
     }
 }
 
+plugins {
+    id 'org.jmailen.kotlinter' version '1.14.0'
+    id 'org.jetbrains.kotlin.jvm' version "1.2.51"
+    id 'application'
+}
+
 group 'no.nav.pdfgen'
 version '1.0-SNAPSHOT'
-
-apply plugin: 'kotlin'
-apply plugin: 'application'
 
 mainClassName = 'no.nav.pdfgen.BootstrapKt'
 
