--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,7 @@ dependencies {
     testRuntimeOnly 'org.spekframework.spek2:spek-runner-junit5:2.0.0-alpha.1'
 
     testImplementation "org.verapdf:validation-model:1.4.5"
+    testImplementation "com.squareup.okhttp3:okhttp:3.11.0"
 }
 
 compileKotlin {
