--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     implementation "org.jsoup:jsoup:$jsoup_version"
     implementation "com.fasterxml.jackson.core:jackson-core:$jackson_version"
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jackson_version"
+    implementation "javax.xml.bind:jaxb-api:2.1"
 
     implementation "io.ktor:ktor-server-netty:$ktor_version"
     implementation "io.prometheus:simpleclient_common:$prometheus_version"
