--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation "com.github.jknack:handlebars:$handlebars_version"
     implementation "com.github.jknack:handlebars-jackson2:$handlebars_jackson_version"
     implementation "com.openhtmltopdf:openhtmltopdf-pdfbox:$open_html_to_pdf_version"
+    implementation "com.openhtmltopdf:openhtmltopdf-slf4j:$open_html_to_pdf_version"
 
     implementation "org.jsoup:jsoup:$jsoup_version"
     implementation "com.fasterxml.jackson.core:jackson-core:$jackson_version"
