--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext.prometheus_version = '0.3.0'
     ext.logback_version = '1.2.3'
     ext.logstash_encoder_version = '5.1'
-    ext.open_html_to_pdf_version = '0.0.1-RC14'
+    ext.open_html_to_pdf_version = '0.0.1-RC16-NAV'
     ext.handlebars_version = '4.1.0'
     ext.handlebars_jackson_version = '1.0.0'
     ext.jsoup_version = '1.11.3'
@@ -57,6 +57,7 @@ test {
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
     jcenter()
     maven { url "https://dl.bintray.com/kotlin/ktor" }
@@ -70,6 +71,7 @@ dependencies {
     implementation "com.github.jknack:handlebars-jackson2:$handlebars_jackson_version"
     implementation "com.openhtmltopdf:openhtmltopdf-pdfbox:$open_html_to_pdf_version"
     implementation "com.openhtmltopdf:openhtmltopdf-slf4j:$open_html_to_pdf_version"
+    implementation "com.openhtmltopdf:openhtmltopdf-svg-support:$open_html_to_pdf_version"
 
     implementation "org.jsoup:jsoup:$jsoup_version"
     implementation "com.fasterxml.jackson.core:jackson-core:$jackson_version"
@@ -83,10 +85,10 @@ dependencies {
     implementation "ch.qos.logback:logback-classic:$logback_version"
     implementation "net.logstash.logback:logstash-logback-encoder:$logstash_encoder_version"
 
-    testImplementation 'org.spekframework.spek2:spek-dsl-jvm:2.0.0-alpha.1'
+    testImplementation 'org.spekframework.spek2:spek-dsl-jvm:2.0.0-alpha.2'
     testImplementation 'org.amshove.kluent:kluent:1.39'
-    testRuntimeOnly "org.spekframework.spek2:spek-runtime-jvm:2.0.0-alpha.1"
-    testRuntimeOnly 'org.spekframework.spek2:spek-runner-junit5:2.0.0-alpha.1'
+    testRuntimeOnly "org.spekframework.spek2:spek-runtime-jvm:2.0.0-alpha.2"
+    testRuntimeOnly 'org.spekframework.spek2:spek-runner-junit5:2.0.0-alpha.2'
 
     testImplementation "org.verapdf:validation-model:1.4.5"
     testImplementation "com.squareup.okhttp3:okhttp:3.11.0"
