--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ plugins {
 }
 
 group 'no.nav.pdfgen'
-version '1.0.5-SVG-SNAPSHOT'
+version '1.0.5-SVG'
 
 mainClassName = 'no.nav.pdfgen.BootstrapKt'
 
