--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext.prometheus_version = '0.3.0'
     ext.logback_version = '1.2.3'
     ext.logstash_encoder_version = '5.1'
-    ext.open_html_to_pdf_version = '0.0.1-RC14'
+    ext.open_html_to_pdf_version = '0.0.1-RC16'
     ext.handlebars_version = '4.1.0'
     ext.handlebars_jackson_version = '1.0.0'
     ext.jsoup_version = '1.11.3'
@@ -83,13 +83,13 @@ dependencies {
     implementation "ch.qos.logback:logback-classic:$logback_version"
     implementation "net.logstash.logback:logstash-logback-encoder:$logstash_encoder_version"
 
-    testImplementation 'org.spekframework.spek2:spek-dsl-jvm:2.0.0-alpha.1'
+    testImplementation 'org.spekframework.spek2:spek-dsl-jvm:2.0.0-alpha.2'
     testImplementation 'org.amshove.kluent:kluent:1.39'
-    testRuntimeOnly "org.spekframework.spek2:spek-runtime-jvm:2.0.0-alpha.1"
-    testRuntimeOnly 'org.spekframework.spek2:spek-runner-junit5:2.0.0-alpha.1'
+    testRuntimeOnly "org.spekframework.spek2:spek-runtime-jvm:2.0.0-alpha.2"
+    testRuntimeOnly 'org.spekframework.spek2:spek-runner-junit5:2.0.0-alpha.2'
 
     testImplementation "org.verapdf:validation-model:1.4.5"
-    testImplementation "com.squareup.okhttp3:okhttp:3.11.0"
+    testImplementation "io.ktor:ktor-client-cio:$ktor_version"
 }
 
 compileKotlin {
