Temporarily use the team tag teamsykefravr

--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   image: "repo.adeo.no:5443/integrasjon/pdf-gen"
   port: 8080
-  team: integrasjon
+  team: teamsykefravr
   replicas:
     min: 1
     max: 4
