--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -3,6 +3,8 @@ kind: "Application"
 metadata:
   name: pdf-gen
   namespace: default
+  labels:
+    team: teamsykefravr
 spec:
   image: "repo.adeo.no:5443/integrasjon/pdf-gen"
   port: 8080
