--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ dependencies {
 
     implementation "org.jsoup:jsoup:$jsoup_version"
     implementation "com.fasterxml.jackson.core:jackson-core:$jackson_version"
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:$jackson_version"
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jackson_version"
     implementation "javax.xml.bind:jaxb-api:2.1"
     implementation "org.glassfish.jaxb:jaxb-runtime:$jaxb_version"
