--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext.jaxb_version = "2.3.1"
     ext.jsoup_version = '1.11.3'
     ext.kluent_version = '1.42'
-    ext.ktor_version = '1.0.0'
+    ext.ktor_version = '1.1.2'
     ext.kotlin_version = '1.3.10'
     ext.logback_version = '1.2.3'
     ext.logstash_encoder_version = '5.2'
@@ -64,6 +64,7 @@ dependencies {
     implementation "org.glassfish.jaxb:jaxb-runtime:$jaxb_version"
 
     implementation "io.ktor:ktor-server-netty:$ktor_version"
+    implementation "io.ktor:ktor-jackson:$ktor_version"
     implementation "io.prometheus:simpleclient_common:$prometheus_version"
     implementation "io.prometheus:simpleclient_hotspot:$prometheus_version"
 
