--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_cache:
 - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 deploy:
   provider: script
-  script: travis_scripts/docker_push
+  script: scripts/docker_push
   on:
     branch: master
 cache:
