Add script directly to config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,9 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Run tests
+          command: ./gradlew test
+      - run:
           name: Build JAR file
           command: ./gradlew shadowJar
   release:
@@ -15,7 +18,22 @@ jobs:
     steps:
       - run:
           name: Build and push to docker hub
-          command: scripts/docker_push
+          command: |
+            VERSION="$(./gradlew -q printVersion)"
+            GIT_HASH="$(git rev-parse HEAD)"
+
+            echo "Extracted version = \"$VERSION\""
+            echo "Extracted git hash = \"$GIT_HASH\""
+
+            docker build -t navikt/pdfgen:latest .
+            docker tag navikt/pdfgen:latest "navikt/pdfgen:$VERSION"
+            docker tag navikt/pdfgen:latest "navikt/pdfgen:$GIT_HASH"
+
+            echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+
+            docker push "navikt/pdfgen:latest"
+            docker push "navikt/pdfgen:$VERSION"
+            docker push "navikt/pdfgen:$GIT_HASH"
           requires:
             branches:
               only: master
