--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,9 +13,15 @@ jobs:
       - run:
           name: Build JAR file
           command: ./gradlew shadowJar
+      - persist_to_workspace:
+          root: /tmp/workspace
+          paths: build/*.jar
   release:
     <<: *defaults
     steps:
+      - checkout
+      - attach_workspace:
+          at: /tmp/workspace
       - run:
           name: Build and push to docker hub
           command: |
@@ -34,9 +40,6 @@ jobs:
             docker push "navikt/pdfgen:latest"
             docker push "navikt/pdfgen:$VERSION"
             docker push "navikt/pdfgen:$GIT_HASH"
-          requires:
-            branches:
-              only: master
 
 workflows:
     version: 2
