--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,8 @@ jobs:
     <<: *defaults
     steps:
       - checkout
+      - setup_remote_docker:
+          -  docker_layer_caching: true
       - attach_workspace:
           at: /tmp/workspace
       - run:
