--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker:
-          -  docker_layer_caching: true
+          docker_layer_caching: true
       - attach_workspace:
           at: /tmp/workspace
       - run:
