--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
           name: Copy jar to expected path
           command: |
             mkdir build
-            cp /tmp/workspace/*.jar build/
+            cp /tmp/workspace/*.jar build/libs/
       - run:
           name: Build and push to docker hub
           command: |
