--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,11 +5,12 @@ on:
       - master
 
 env:
-  IMAGE: docker.pkg.github.com/${{ github.repository }}/pdfgen:${{ github.sha }}
+  image: docker.pkg.github.com/${{ github.repository }}/pdfgen:${{ github.sha }}
+  dockerhub_image: ${{ github.repository }}/pdfgen
 
 jobs:
   build:
-    name: Checkout code and create docker tag
+    name: Build and push docker image
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -38,21 +39,36 @@ jobs:
           ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_TOKEN }}
         run: |
           ./gradlew shadowJar -x test
-      - name: Build and publish Docker image
+          echo ::set-env name=version::${./gradlew -q printVersion}
+      - name: Build Docker images
+        run: |
+          docker build --tag ${image} .
+      - name: Push docker image to GitHub
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          docker build --tag ${IMAGE} .
           docker login docker.pkg.github.com -u ${GITHUB_REPOSITORY} -p ${GITHUB_TOKEN}
-          docker push ${IMAGE}
-      - name: Deploy to Preprod
-        uses: nais/deploy/actions/deploy@master
+          docker push ${image}
+
+  deployDev:
+    name: Deploy to dev
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-fss
           RESOURCE: naiserator.yaml
-      - name: Deploy to Prod
-        uses: nais/deploy/actions/deploy@master
+
+  deployProd:
+    name: Deploy to prod
+    needs: [build, deployDev]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-fss
