Legger med image som env var til deploy-jobbene
Co-authored-by: Jonas Hasle <jonas.hasle@nav.no>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,6 +61,7 @@ jobs:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-fss
           RESOURCE: naiserator.yaml
+          IMAGE: ${{ image }}
 
   deployProd:
     name: Deploy to prod
@@ -73,3 +74,4 @@ jobs:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-fss
           RESOURCE: naiserator.yaml
+          IMAGE: ${{ image }}
