--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,8 +5,8 @@ on:
       - master
 
 env:
-  image: docker.pkg.github.com/${{ github.repository }}/pdfgen:${{ github.sha }}
-  dockerhub_image: ${{ github.repository }}/pdfgen
+  IMAGE: docker.pkg.github.com/${{ github.repository }}/pdfgen:${{ github.sha }}
+  DOCKERHUB_IMAGE: ${{ github.repository }}/pdfgen
 
 jobs:
   build:
@@ -42,7 +42,7 @@ jobs:
           echo ::set-env name=version::$(./gradlew -q printVersion)
       - name: Build Docker images
         run: |
-          docker build --tag ${image} .
+          docker build --tag ${IMAGE} .
       - name: Push docker image to GitHub
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -61,7 +61,6 @@ jobs:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-fss
           RESOURCE: naiserator.yaml
-          IMAGE: ${{ image }}
 
   deployProd:
     name: Deploy to prod
@@ -74,4 +73,3 @@ jobs:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-fss
           RESOURCE: naiserator.yaml
-          IMAGE: ${{ image }}
