Forsøker med annet dockerhub image navn
Co-authored-by: Knut Nygaard <knut.nygaard@nav.no>
Co-authored-by: Jonas Hasle <jonas.hasle@nav.no>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 env:
   IMAGE: docker.pkg.github.com/${{ github.repository }}/pdfgen:${{ github.sha }}
   GITHUB_SHA: ${{ github.sha }}
-  DOCKERHUB_IMAGE: ${{ github.repository }}/pdfgen
+  DOCKERHUB_IMAGE: navikt/pdfgen
 
 jobs:
   build:
