--- a/.github/workflows/devdeploy.yml
+++ b/.github/workflows/devdeploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to dev
+name: Run tests
 on:
   push:
     branches:
@@ -9,11 +9,16 @@ env:
 
 jobs:
   build:
-    name: Checkout code and create docker tag
+    name: Checkout code and run tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@master
+      - name: Set up Java 14
+        uses: actions/setup-java@v1
+        with:
+         java-version: '14'
+         architecture: x64
       - uses: actions/cache@v1
         with:
           path: ~/.gradle/caches
@@ -38,16 +43,3 @@ jobs:
           ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_TOKEN }}
         run: |
           ./gradlew shadowJar -x test
-      - name: Build and publish Docker image
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          docker build --tag ${IMAGE} .
-          docker login docker.pkg.github.com -u ${GITHUB_REPOSITORY} -p ${GITHUB_TOKEN}
-          docker push ${IMAGE}
-      - name: Deploy to Preprod
-        uses: nais/deploy/actions/deploy@master
-        env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: dev-fss
-          RESOURCE: naiserator.yaml
