--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Bygg og deploy
+name: Bygg and publish
 on:
   push:
     branches:
@@ -16,6 +16,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@master
+      - name: Set up Java 14
+        uses: actions/setup-java@v1
+        with:
+          java-version: '14'
+          architecture: x64
       - uses: actions/cache@v1
         with:
           path: ~/.gradle/caches
