--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,11 +12,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@master
       - name: Set up Java 17
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@@v3
         with:
+         distribution: 'temurin'
          java-version: '17'
          architecture: x64
-      - uses: actions/cache@v1
+      - uses: actions/cache@v3
         with:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-cache-${{ hashFiles('build.gradle.kts') }}
