--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@master
       - name: Set up Java 17
-        uses: actions/setup-java@@v3
+        uses: actions/setup-java@v3
         with:
          distribution: 'temurin'
          java-version: '17'
