--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,8 @@
-name: Build PR
+name: Build master
 on:
-  pull_request_target:
+  push:
+    branches:
+      - master         # Push events on master branch
     paths-ignore:
       - '**.md'
       - '**.MD'
@@ -27,4 +29,4 @@ jobs:
           ORG_GRADLE_PROJECT_githubUser: x-access-token
           ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          ./gradlew shadowJar 
+          ./gradlew shadowJar
