support for release drafts that updates itself continously

--- a/.github/workflows/release-image.yml
+++ b/.github/workflows/release-image.yml
@@ -9,7 +9,7 @@ env:
 
 jobs:
   build:
-    name: Bygg pull-request
+    name: Build and publish docker image
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
