Added in permissions to write packages

--- a/.github/workflows/release-image.yml
+++ b/.github/workflows/release-image.yml
@@ -3,6 +3,9 @@ on:
   release:
     types: [published]
 
+permissions:
+  packages: write
+
 env:
   IMAGE: ghcr.io/${{ github.repository }}
   NEW_VERSION: ${{ github.event.release.tag_name }}
