--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,13 @@ jobs:
           java-version: '21'
           architecture: x64
           cache: 'gradle'
+      - name: Build gradle artifacts
+        shell: bash
+        run: |
+          ./gradlew shadowJar
+        env:
+          ORG_GRADLE_PROJECT_githubUser: x-access-token
+          ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_TOKEN }}
       - name: Run tests
         env:
           ORG_GRADLE_PROJECT_githubUser: x-access-token
