feat!: Initial release of pdfgen-core

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@
 [{*.kt,*.kts}]
 indent_style = space
 insert_final_newline = true
-max_line_length = 100
+max_line_length = off
 indent_size = 4
 ij_continuation_indent_size = 4
 ij_java_names_count_to_use_import_on_demand = 9999
