--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -2,9 +2,9 @@ name: Analyze
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "main" ]
 
 jobs:
   analyze:
