--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,8 @@
-name: Build master
+name: Build main
 on:
   push:
     branches:
-      - master         # Push events on master branch
+      - main
     paths-ignore:
       - '**.md'
       - '**.MD'
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@master
+        uses: actions/checkout@v4
       - name: Set up Java 21
         uses: actions/setup-java@v4
         with:
