--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Build PR
 on:
   push:
     branches-ignore:
-      - master
+      - main
     paths-ignore:
       - '**.md'
       - '**.MD'
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@master
+        uses: actions/checkout@v4
       - name: Set up Java 21
         uses: actions/setup-java@v4
         with:
