--- a/.github/workflows/release-image.yml
+++ b/.github/workflows/release-image.yml
@@ -35,5 +35,6 @@ jobs:
         id: docker-build-push
         with:
           team: pdfgen
+          tag: ${{ env.NEW_VERSION }}
           identity_provider: "${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}"
           project_id: "${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}"
