--- a/.github/workflows/release-image.yml
+++ b/.github/workflows/release-image.yml
@@ -36,5 +36,6 @@ jobs:
         with:
           team: pdfgen
           tag: ${{ env.NEW_VERSION }}
+          image_suffix: ${{ env.NEW_VERSION }}
           identity_provider: "${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}"
           project_id: "${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}"
