--- a/.github/workflows/release-image.yml
+++ b/.github/workflows/release-image.yml
@@ -8,7 +8,7 @@ permissions:
   id-token: write
   packages: write
 env:
-  
+  IMAGE: ghcr.io/${{ github.repository }}
   NEW_VERSION: ${{ github.event.release.tag_name }}
 
 jobs:
@@ -29,7 +29,16 @@ jobs:
         shell: bash
         run: |
           ./gradlew shadowJar
-      - name: docker-build-push
+      - name: Build Docker image to ghcr.io
+        run: |
+          docker build --tag ${{ env.IMAGE }}:${{ env.NEW_VERSION }} .
+      - name: Push docker image to GitHub
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          docker login ghcr.io -u ${GITHUB_REPOSITORY} -p ${GITHUB_TOKEN}
+          docker push ${{ env.IMAGE }}:${{ env.NEW_VERSION }}
+      - name: Build and push docker image to GAR
         uses: nais/docker-build-push@v0
         env:
           ACTIONS_RUNTIME_TOKEN: ${{ secrets.GITHUB_TOKEN  }}
@@ -37,6 +46,5 @@ jobs:
         with:
           team: pdfgen
           tag: ${{ env.NEW_VERSION }}
-          image_suffix: ${{ env.NEW_VERSION }}
           identity_provider: "${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}"
           project_id: "${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}"
