--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Build gradle artifacts
       run: |
-        ./gradlew shadowJar
+        ./gradlew installDist
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
