Add login step to nais in release workflow

--- a/.github/workflows/release-image.yml
+++ b/.github/workflows/release-image.yml
@@ -29,6 +29,10 @@ jobs:
         shell: bash
         run: |
           ./gradlew installDist
+      - name: Login to nais
+        uses: nais/login@v0
+        with:
+          team: pdfgen
       - name: Build Docker image to ghcr.io
         run: |
           docker build --tag ${{ env.IMAGE }}:${{ env.NEW_VERSION }} .
