Update Dependabot schedule and add cooldown
Changed the update schedule for Gradle from daily to weekly and added a cooldown period for all package ecosystems.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,15 +3,21 @@ updates:
   - package-ecosystem: "gradle"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+    cooldown:
+      default-days: 7
     open-pull-requests-limit: 15
   - package-ecosystem: "docker"
     directory: "/"
     schedule:
       interval: "weekly"
+    cooldown:
+      default-days: 7
     open-pull-requests-limit: 15
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "weekly"
+    cooldown:
+      default-days: 7
     open-pull-requests-limit: 15
